@@ -122,9 +122,13 @@ static gint32 ReadInt (GsfInput *input, int size)
 }*/
 
 typedef struct {
-	guint32 Arrow;
-	std::list < unsigned > Reagents, Products, ObjectsAbove, ObjectsBelow;
+	std::list < unsigned > Arrows, Reagents, Products, ObjectsAbove, ObjectsBelow;
 } StepData;
+
+typedef struct {
+	unsigned Id;
+	std::list < StepData > Steps;
+} SchemeData;
 
 class CDXLoader: public gcu::Loader
 {
@@ -150,6 +154,7 @@ private:
 	bool ReadArrow (GsfInput *in, Object *parent);
 	guint16 ReadSize (GsfInput *in);
 	bool ReadDate (GsfInput *in);
+	void BuildScheme (gcu::Document *doc, SchemeData &scheme);
 
 	bool WriteObject (GsfOutput *out, Object const *object, GOIOContext *io);
 	static void AddInt16Property (GsfOutput *out, gint16 prop, gint16 value);
@@ -166,13 +171,15 @@ private:
 	map<unsigned, CDXFont> m_Fonts;
 	vector <string> colors;
 	guint8 m_TextAlign, m_TextJustify;
+	unsigned m_Charset;
 
 	map <string, bool (*) (CDXLoader *, GsfOutput *, Object const *, GOIOContext *)> m_WriteCallbacks;
 	map<unsigned, GOColor> m_Colors;
-	map <string, gint32> m_SavedIds;
-	std::map <gint32, std::string> m_LoadedIds;
-	std::map <gint32, gint32> m_Superseded;
-	std::list <StepData > m_Scheme;
+	map <string, guint32> m_SavedIds;
+	std::map <guint32, std::string> m_LoadedIds;
+	std::map <guint32, guint32> m_Superseded;
+	SchemeData m_Scheme;
+	std::list < SchemeData > m_Schemes;
 	gint32 m_MaxId;
 	unsigned m_Z;
 };
@@ -621,6 +628,13 @@ ContentType CDXLoader::Read  (Document *doc, GsfInput *in, G_GNUC_UNUSED char co
 			result = ContentTypeUnknown;
 			break;
 		}
+	}
+	// time to build reaction schemes and the like
+	std::list < SchemeData >::iterator i, iend = m_Schemes.end ();
+	for (i = m_Schemes.begin (); i != iend; i++) {
+		if ((*i).Steps.empty ())
+			continue;
+		BuildScheme (doc, *i);
 	}
 	delete [] buf;
 	m_Fonts.clear ();
@@ -1420,6 +1434,7 @@ bool CDXLoader::ReadText (GsfInput *in, Object *parent)
 	Object *Text= parent->GetApplication ()->CreateObject ("text", parent);
 	guint32 Id;
 	guint8 TextAlign = 0xfe, TextJustify = 0xfe;
+	char *utf8str;
 	if (!(READINT32 (in,Id)))
 		return false;
 	ostringstream str;
@@ -1461,11 +1476,11 @@ bool CDXLoader::ReadText (GsfInput *in, Object *parent)
 				list <attribs> attributes;
 				size -=2;
 				guint16 *n = &attrs.index;
-				for (int i =0; i < nb; i++) {
+				for (int i = 0; i < nb; i++) {
 					if (size < 10)
 						return false;
 					for (int j = 0; j < 5; j++)
-						if (!(READINT16 (in,n[j])))
+						if (!(READINT16 (in, n[j])))
 							return false;
 					attributes.push_back (attrs);
 					size -= 10;
@@ -1476,7 +1491,10 @@ bool CDXLoader::ReadText (GsfInput *in, Object *parent)
 					if (!gsf_input_read (in, size, (guint8*) buf))
 						return false;
 					buf[size] = 0;
-					Text->SetProperty (GCU_PROP_TEXT_TEXT, buf);
+					utf8str = g_convert (buf, size, "utf-8", Charsets[m_Fonts[attrs.font].encoding].c_str (),
+					                           NULL, NULL, NULL);
+					Text->SetProperty (GCU_PROP_TEXT_TEXT, utf8str);
+					g_free (utf8str);
 				} else {
 					ostringstream str;
 					str << "<text>";
@@ -1488,14 +1506,15 @@ bool CDXLoader::ReadText (GsfInput *in, Object *parent)
 							if (!gsf_input_read (in, attrs0.index, (guint8*) buf))
 								return false;
 							buf[attrs0.index] = 0;
-							// supposing the text is ASCII !!
+							utf8str = g_convert (buf, size, "utf-8", Charsets[m_Fonts[attrs.font].encoding].c_str (),
+									                   NULL, NULL, NULL);
 							if (interpret) {
 								// for now put all numbers as subscripts
 								// FIXME: fix this kludgy code
 								int cur = 0;
 								while (cur < attrs0.index) {
-									while (cur < attrs0.index && (buf[cur] < '0' || buf[cur] > '9'))
-										str << buf[cur++];
+									while (cur < attrs0.index && (utf8str[cur] < '0' || utf8str[cur] > '9'))
+										str << utf8str[cur++];
 									if (cur < attrs0.index) {
 										if (attrs0.face & 4)
 											str << "</u>";
@@ -1506,8 +1525,8 @@ bool CDXLoader::ReadText (GsfInput *in, Object *parent)
 										str << "</fore></font><font name=\"" << m_Fonts[attrs.font].name << ", " << (double) attrs.size / 30. << "\">";
 										str << "<fore " << colors[attrs.color] << ">";
 										str << "<sub height=\"" << (double) attrs.size / 60. << "\">";
-										while (buf[cur] >= '0' && buf[cur] <= '9')
-											str << buf[cur++];
+										while (utf8str[cur] >= '0' && utf8str[cur] <= '9')
+											str << utf8str[cur++];
 										str << "</sub></fore></font><font name=\"" << m_Fonts[attrs.font].name << ", " << (double) attrs.size / 20. << "\">";
 										str << "<fore " << colors[attrs.color] << ">";
 										if (attrs0.face & 1)
@@ -1519,7 +1538,8 @@ bool CDXLoader::ReadText (GsfInput *in, Object *parent)
 									}
 								}
 							} else
-								str << buf;
+								str << utf8str;
+							g_free (utf8str);
 							size -= attrs0.index;
 							if ((attrs0.face & 0x60) == 0x60)
 								interpret = false;
@@ -1560,14 +1580,16 @@ bool CDXLoader::ReadText (GsfInput *in, Object *parent)
 						return false;
 					buf[size] = 0;
 					bool opened = true;
+					utf8str = g_convert (buf, size, "utf-8", Charsets[m_Fonts[attrs.font].encoding].c_str (),
+					                           NULL, NULL, NULL);
 					// supposing the text is ASCII!!
 					if (interpret) {
 						// for now put all numbers as subscripts
 						// FIXME: fix this kludgy code
 						int cur = 0;
 						while (cur < size) {
-							while (cur < size && (buf[cur] < '0' || buf[cur] > '9'))
-								str << buf[cur++];
+							while (cur < size && (utf8str[cur] < '0' || utf8str[cur] > '9'))
+								str << utf8str[cur++];
 							if (cur < size) {
 								if (attrs0.face & 4)
 									str << "</u>";
@@ -1578,8 +1600,8 @@ bool CDXLoader::ReadText (GsfInput *in, Object *parent)
 								str << "</fore></font><font name=\"" << m_Fonts[attrs.font].name << ", " << (double) attrs.size / 30. << "\">";
 								str << "<fore " << colors[attrs.color] << ">";
 								str << "<sub height=\"" << (double) attrs.size / 60. << "\">";
-								while (buf[cur] >= '0' && buf[cur] <= '9')
-									str << buf[cur++];
+								while (utf8str[cur] >= '0' && utf8str[cur] <= '9')
+									str << utf8str[cur++];
 								str << "</sub></fore></font>";
 								if (cur < size) {
 									str << "<font name=\"" << m_Fonts[attrs.font].name << ", " << (double) attrs.size / 20. << "\">";
@@ -1595,7 +1617,8 @@ bool CDXLoader::ReadText (GsfInput *in, Object *parent)
 							}
 						}
 					} else
-						str << buf;
+						str << utf8str;
+					g_free (utf8str);
 					if (opened) {
 						if ((attrs0.face & 0x60) != 0x60) {
 							if (attrs0.face & 0x40)
@@ -1876,26 +1899,21 @@ bool CDXLoader::ReadFragmentText (GsfInput *in, G_GNUC_UNUSED Object *parent)
 bool CDXLoader::ReadScheme (GsfInput *in, Object *parent)
 {
 	guint16 code;
-	guint32 Id;
-	m_Scheme.clear ();
-	if (!(READINT32 (in,Id)))
+	m_Scheme.Steps.clear ();
+	if (!(READINT32 (in,m_Scheme.Id)))
 		return false;
-	ostringstream str;
-	str << "r" << Id;
-	gcu::Object *obj = parent->GetApplication ()->CreateObject ("reaction", parent);
-	obj->SetId (str.str ().c_str ());
-	m_LoadedIds[Id] = obj->GetId ();
 	if (!(READINT16 (in,code)))
 		return false;
 	while (code) {
 		if (code == kCDXObj_ReactionStep) {
-			if (!ReadStep (in, obj))
+			if (!ReadStep (in, parent))
 				return false;
 		} else 
 			return false;
 		if (!(READINT16 (in,code)))
 			return false;
 	}
+	m_Schemes.push_back (m_Scheme);
 	return true;
 }
 
@@ -1957,17 +1975,18 @@ bool CDXLoader::ReadStep (GsfInput *in, Object *parent)
 				for (i = 0; i < max; i++) {
 					if (!(READINT32 (in, id)))
 						return false;
-				}
 					data.ObjectsBelow.push_back (id);
+				}
 				break;
 			case kCDXProp_ReactionStep_Arrows:
 				if ((size % 4) != 0)
 					return false;
-				// reading only the firt arrow for now
-				if (!(READINT32 (in, data.Arrow)))
+				max = size / 4;
+				for (i = 0; i < max; i++) {
+					if (!(READINT32 (in, id)))
 						return false;
-				if (size > 4 && gsf_input_seek (in, size - 4, G_SEEK_CUR))
-					return false;
+					data.Arrows.push_back (id);
+				}
 				break;
 			default:
 				if (size && gsf_input_seek (in, size, G_SEEK_CUR))
@@ -1977,13 +1996,160 @@ bool CDXLoader::ReadStep (GsfInput *in, Object *parent)
 		if (!(READINT16 (in,code)))
 			return false;
 	}
-	m_Scheme.push_back (data);
+	m_Scheme.Steps.push_back (data);
 	return true;
 }
 
 bool CDXLoader::ReadArrow (GsfInput *in, Object *parent)
 {
 	return true;
+}
+
+void CDXLoader::BuildScheme (gcu::Document *doc, SchemeData &scheme)
+{
+	std::list < StepData >::iterator i, iend = scheme.Steps.end ();
+	std::list < unsigned >::iterator j, jend;
+	int IsReaction = 0, IsMesomery = 0, IsRetrosynthesis = 0;
+	bool HasMesomeryArrows = false;
+	gcu::Object *parent, *arrow, *obj;
+	for (i = scheme.Steps.begin (); i != iend; i++) {
+		if ((*i).Arrows.size () != 1)
+			return; // unsupported feature, don't load the scheme
+		std::string klass = gcu::Object::GetTypeName (doc->GetChild ((m_LoadedIds[*((*i).Arrows.begin())]).c_str ())->GetType ());
+		if (klass == "retrosynthesis-arrow") {
+			if (IsRetrosynthesis == -1)
+				return;
+			IsRetrosynthesis = 1;
+			IsReaction = IsMesomery = -1;
+		} else if (klass ==  "mesomery-arrow") {
+			if (IsMesomery == -1)
+				return;
+			IsRetrosynthesis = -1;
+			if (IsMesomery == 0 && IsReaction == 0)
+				IsMesomery = 1;
+			HasMesomeryArrows = true;
+		} else if (klass ==  "reaction-arrow") {
+			if (IsReaction == -1 || IsMesomery == -1)
+				return;
+			IsReaction = 1;
+			IsRetrosynthesis = -1;
+			IsMesomery = 0;
+		} else
+			return;
+	}
+	if (IsRetrosynthesis == 1) {
+	} else if (IsMesomery == 1) {
+		gcu::Object *mesomery = doc->CreateObject ("mesomery", doc);
+		ostringstream str;
+		str << "msy" << scheme.Id;
+		mesomery->SetId (str.str ().c_str ());
+		m_LoadedIds[scheme.Id] = mesomery->GetId ();
+		// now, add the objects to the reaction
+		for (i = scheme.Steps.begin (); i != iend; i++) {
+			if ((*i).Reagents.size () != 1 || (*i).Products.size () != 1) {
+				delete mesomery;
+				return;
+			}
+			// first the arrow
+			arrow = doc->GetChild ((m_LoadedIds[*((*i).Arrows.begin())]).c_str ());
+			obj = doc->GetDescendant (m_LoadedIds[*(*i).Reagents.begin ()].c_str ());
+			parent = obj->GetParent ();
+			if (parent == doc)
+				parent = doc->CreateObject ("mesomer", mesomery);
+			else if (parent->GetParent () != mesomery) {
+				delete mesomery;
+				return;
+			}
+			parent->AddChild (obj);
+			arrow->SetProperty (GCU_PROP_ARROW_START_ID, parent->GetId ());
+			obj = doc->GetDescendant (m_LoadedIds[*(*i).Products.begin ()].c_str ());
+			parent = obj->GetParent ();
+			if (parent == doc)
+				parent = doc->CreateObject ("mesomer", mesomery);
+			else if (parent->GetParent () != mesomery) {
+				delete mesomery;
+				return;
+			}
+			parent->AddChild (obj);
+			arrow->SetProperty (GCU_PROP_ARROW_END_ID, parent->GetId ());
+			mesomery->AddChild (arrow);
+		}
+		// Ignore objects over and under the arrows for now
+	} else if (IsReaction ==1) {
+		if (HasMesomeryArrows) {
+			// build mesomeries inside reactions
+			// FIXME
+		}
+		gcu::Object *reaction = doc->CreateObject ("reaction", doc);
+		ostringstream str;
+		str << "r" << scheme.Id;
+		reaction->SetId (str.str ().c_str ());
+		m_LoadedIds[scheme.Id] = reaction->GetId ();
+		// now, add the objects to the reaction
+		for (i = scheme.Steps.begin (); i != iend; i++) {
+			// first the arrow
+			arrow = doc->GetChild ((m_LoadedIds[*((*i).Arrows.begin())]).c_str ());
+			reaction->AddChild (arrow);
+			// first reagents
+			jend = (*i).Reagents.end ();
+			parent = NULL;
+			gcu::Object *rs = NULL; // make g++ happy
+			for (j = (*i).Reagents.begin (); j != jend; j++) {
+				obj = doc->GetDescendant (m_LoadedIds[*j].c_str ());
+				if (obj == NULL) {
+					delete reaction;
+					return;
+				}
+				if (parent == NULL) {
+					parent = obj->GetParent ();
+					if (parent == doc) {
+						rs = reaction->CreateObject ("reaction-step", reaction);
+						rs->AddChild (obj);
+					} else {
+						rs = parent;
+						if (rs->GetParent () != reaction) {
+							delete reaction;
+							return;
+						}
+					}
+				} else {
+					if (parent != obj->GetParent ()) {
+						delete reaction;
+						return;
+					} else if (parent == doc)
+						rs->AddChild (obj);
+				}
+				// search for potential stoichiometry coefficients
+				arrow->SetProperty (GCU_PROP_ARROW_START_ID, rs->GetId ());
+			}
+			// same treatment for products
+			jend = (*i).Products.end ();
+			parent = NULL;
+			for (j = (*i).Products.begin (); j != jend; j++) {
+				obj = doc->GetDescendant (m_LoadedIds[*j].c_str ());
+				if (obj == NULL) {
+					delete reaction;
+					return;
+				}
+				if (parent == NULL) {
+					parent = obj->GetParent ();
+					if (parent == doc) {
+						rs = reaction->CreateObject ("reaction-step", reaction);
+						rs->AddChild (obj);
+					} else
+						rs = parent;
+				} else {
+					if (parent != obj->GetParent ()) {
+						delete reaction;
+						return;
+					} else if (parent == doc)
+						rs->AddChild (obj);
+				}
+				// search for potential stoichiometry coefficients
+				arrow->SetProperty (GCU_PROP_ARROW_END_ID, rs->GetId ());
+			}
+		}
+	}
 }
 
 static CDXLoader loader;
